<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="accept">Accept</string>

    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_reuniao">Reunion</string>
    <string name="action_status">Status</string>

    <string name="add_project">Add Project</string>
    <string name="add_reuniao">Add Reunion</string>
    <string name="add_reuniao_usuario">Add Participant</string>
    <string name="add_sprint">Add Sprint</string>
    <string name="add_status">Add Status</string>
    <string name="add_task">Add Task</string>

    <string name="app_database">Banquinho</string>
    <string name="app_name">KeepSoft</string>

    <string name="assunto">Subject</string>

    <string name="button">Button</string>

    <string name="cancel">Cancel</string>
    <string name="cancel_invitation">Cancel Invitation</string>

    <string name="change">Change</string>
    <string name="change_password">Change Password</string>

    <string name="check_internet_connection">Check your internet connection!</string>

    <string name="color">Color</string>

    <string name="confirm">Confirm</string>

    <string name="confirmEmail">You must confirm your email.</string>

    <string name="confirm_log_out">Are you sure you want to log out?</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <plurals name="days">
        <item quantity="one">Yesterday</item>
        <item quantity="many">%1$d days ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>

    <string name="decline">Decline</string>

    <string name="default_notification_channel_id">O</string>
    <string name="default_notification_channel_title">Titulo</string>

    <string name="delete_account_confirm">Are you sure you want to delete your account?</string>
    <string name="delete_task_confirm">Are you sure you want to delete this task?</string>

    <string name="description">Description</string>

    <string-array name="difficulties_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Very Hard</item>
    </string-array>

    <string name="difficulty">Difficulty</string>

    <string name="due_date">Due date for completion</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="edit_sprint">Edit Sprint</string>
    <string name="edit_status">Edit Status</string>

    <string name="email">Email</string>

    <string name="error">Error</string>

    <string name="field_email_empty">Field email cannot be empty!</string>
    <string name="field_name_empty">Field name cannot be empty!</string>

    <plurals name="hours">
        <item quantity="one">One hour ago</item>
        <item quantity="many">%1$d hours ago</item>
        <item quantity="other">%1$d hours ago</item>
    </plurals>

    <string name="invitation">Invitation</string>
    <string name="invitation_description">%1$s invites you to join the project %2$s as a %3$s</string>
    <string name="invitation_not_accepted">"Invitation not accepted yet "</string>

    <string name="invite_member">Invite Member</string>

    <string name="leave">Leave</string>
    <string name="leave_project_confirm">Do you really want to leave this project?</string>

    <string name="local">Local</string>

    <string name="log_out">Log Out</string>

    <string name="login">Login</string>

    <string name="member">Member</string>

    <plurals name="minutes">
        <item quantity="one">A minute ago</item>
        <item quantity="few">Some minutes ago</item>
        <item quantity="many">%1$d minutes ago</item>
        <item quantity="other">%1$d minutes ago</item>
    </plurals>

    <plurals name="months">
        <item quantity="one">A month ago</item>
        <item quantity="many">%1$d months ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>

    <string name="name">Name</string>

    <string name="new_password">New password</string>

    <string name="next_sprint">Next Sprint: %1$s</string>

    <string name="no_notification">No Notification</string>

    <string name="notifications">Notifications</string>

    <string name="observations">Observations</string>

    <string name="old_password">Old password</string>

    <string name="password">Password</string>

    <string name="percentage" translatable="false">%1$d%%</string>

    <string name="phone">Phone</string>

    <string-array name="priorities_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>

    <string name="priority">Priority</string>

    <string name="profile">Profile</string>

    <string name="project_name">Project Name</string>

    <string name="projects">Projects</string>

    <string name="reconnect">Reconnect</string>

    <string name="rememberpass">Forgot your password?</string>

    <string name="remove_member">Remove member</string>
    <string name="remove_member_confirm">Do you really want to remove %1$s from this project?</string>

    <string name="reuniao_end_hour">Hour End</string>
    <string name="reuniao_start_date">Reunion Start Date</string>
    <string name="reuniao_start_hour">Hour Start</string>

    <string name="role">Role</string>

    <string-array name="scrum_roles_array">
        <item>Scrum Team</item>
        <item>Scrum Master</item>
        <item>Product Owner</item>
    </string-array>

    <!--<string-array name="filter_tasks_array"><item>Name</item><item>Date</item></string-array>-->
    <string name="seconds">%1$d seconds ago</string>

    <string name="select_picture">Select picture</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="sort">Sort:</string>
    <string-array name="sort_tasks_array">
        <item>Due Date</item>
        <item>Name</item>
    </string-array>

    <string name="sprint" translatable="false">Sprint</string>
    <string name="sprint_end_date">Sprint End Date</string>
    <string name="sprint_since_date">Since: \n%1$s</string>
    <string name="sprint_start_date">Sprint Start Date</string>
    <string name="sprint_until_date">Until: \n%1$s</string>

    <string name="sprints" translatable="false">Sprints</string>

    <string name="status" translatable="false">Status</string>

    <string name="task">Tarefa</string>

    <string name="tasks">Tasks</string>

    <string name="team">Team</string>

    <string name="title">Title</string>
    <string name="title_activity_alterar_config">Settings</string>
    <string name="title_activity_alterar_perfil">Change Personal Information</string>
    <string name="title_activity_alterar_perfil_senha">Change Password</string>
    <string name="title_activity_cadastro_projeto">New Project</string>
    <string name="title_activity_cadastro_sprint">New Sprint</string>
    <string name="title_activity_cadastro_tarefa">Tasks</string>
    <string name="title_activity_deletar_conta">Delete account</string>
    <string name="title_activity_detalhes_membro">Member Details</string>
    <string name="title_activity_editar_projeto">Edit Project</string>
    <string name="title_activity_receiver_email">Do you want to receive e-mails?</string>
    <string name="title_activity_receiver_notification">Do you want to receive notifications?</string>
    <string name="title_notifications">Notifications</string>

    <string name="type_your_password">Type your password</string>

    <string name="unavailable_services">Services are currently unavailable!</string>

    <string name="user_in_change">User in charge</string>

    <string name="username_or_email">Username or email</string>

    <string name="warning">Warning!</string>

    <plurals name="weeks">
        <item quantity="one">A week ago</item>
        <item quantity="many">%1$d weeks ago</item>
        <item quantity="other">%1$d weeks ago</item>
    </plurals>

    <string name="wrong_login_password">Wrong login or passwords</string>
    <string name="progress">Progress:</string>
</resources>
