<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_projetos"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/projects"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_notificacoes"
        android:enabled="true"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_perfil"
        android:enabled="true"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>
