<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nescaupower.br.com.keepsoft.Views.Equipe.DetalhesMembroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#223300"
            android:scaleType="centerCrop" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgPerfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp"
            tools:targetApi="lollipop" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_cover_image"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:paddingBottom="24dp"
            tools:targetApi="lollipop">

            <TextView
                android:id="@+id/lblLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/name"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_layout"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblFuncao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="20dp"
                android:drawableTint="@android:color/white"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/role"
                android:textIsSelectable="true"
                tools:targetApi="m" />

            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="20dp"
                android:drawableTint="@android:color/white"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/email"
                android:textIsSelectable="true"
                tools:targetApi="m" />

            <TextView
                android:id="@+id/lblTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:drawablePadding="20dp"
                android:drawableTint="@android:color/white"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/phone"
                android:textIsSelectable="true"
                tools:targetApi="m" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/btnAlterarFuncao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_edit_black_24dp"
                android:drawablePadding="20dp"
                android:drawableTint="@android:color/darker_gray"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/edit_profile"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless"
                tools:targetApi="m" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_clear_black_24dp"
                android:drawablePadding="20dp"
                android:drawableTint="@android:color/darker_gray"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/action_delete"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless"
                tools:targetApi="m" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
